<resources>
    <string name="app_name">usbDacVolumeAndroid</string>
    <string name="auto_apply_on_start">Auto apply on start</string>
    <string name="quit_app_after_applying_volume">Quit app after applying volume</string>
    <string name="no_usb_device">No USB device</string>
    <string name="request_record_permission">Request record permission</string>
    <string name="apply">Apply</string>
    <string name="volume_hex">VOLUME (HEX)</string>
</resources>