<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Device Selection Spinner -->
    <TextView
        android:id="@+id/device_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Device:"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/device_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_label" />

    <EditText
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/volume_hex"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_spinner" />

    <CheckBox
        android:id="@+id/auto_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="autoApplyCheckboxPressed"
        android:text="@string/auto_apply_on_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/volume"
        app:layout_constraintTop_toBottomOf="@+id/volume" />

    <CheckBox
        android:id="@+id/quit_after_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="quitAfterApplyCheckboxPressed"
        android:text="@string/quit_app_after_applying_volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/volume"
        app:layout_constraintTop_toBottomOf="@+id/auto_apply" />

    <Button
        android:id="@+id/mount_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="applyButtonPressed"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quit_after_apply" />

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_usb_device"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mount_btn" />

    <TextView
        android:id="@+id/current_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Volume: -"
        android:textSize="14sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_name" />

    <Button
        android:id="@+id/refresh_volume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh Volume" 
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_volume" />

    <!-- Debug Log ScrollView -->
    <ScrollView
        android:id="@+id/debug_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#f0f0f0"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/refresh_volume_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/debug_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Debug Log (tap to show/hide):\n"
            android:textSize="10sp"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000000"
            android:textIsSelectable="true"/>
    </ScrollView>

    <!-- Toggle Debug Button -->
    <Button
        android:id="@+id/toggle_debug_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Debug"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
